--- a/Publications.html
+++ b/Publications.html
@@ -29,19 +29,7 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=en">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>H. Zhu, F. Wang, T. Ding, Q. Qu, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2412.08175">Model Collapse Analysis and Improvement for Rectified Flow Models</a>," preprint, 2024.</p>
-</li>
-</ul>
-<ul>
 <li><p>Zhen Qin, Casey Jameson, Alireza Goldar, Michael B. Wakin, Zhexuan Gong, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2410.02583">Sample-Optimal Quantum State Tomography for Structured Quantum States in One Dimension</a>," preprint, 2024.</p>
-</li>
-</ul>
-<ul>
-<li><p>Zhen Qin, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2410.15224">Robust Low-rank Tensor Train Recovery</a>," preprint, 2024.</p>
-</li>
-</ul>
-<ul>
-<li><p>Zhen Qin, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2406.06002">Computational and Statistical Guarantees for Tensor-on-Tensor Regression with Tensor Train Decomposition</a>," preprint, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -54,10 +42,6 @@
 </li>
 </ul>
 <ul>
-<li><p>C. Yaras, P. Wang, W. Hu, Z. Zhu, L. Balzano, Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.01154">The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
 <li><p>A. Lidiak, C. Jameson, Z. Qin, G. Tang, M. B. Wakin, Z. Zhu, and Z. Gong, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2207.06397">Quantum state tomography with tensor train cross approximation</a>,", preprint, 2022.</p>
 </li>
 </ul>
@@ -67,6 +51,14 @@
 </li>
 </ul>
 <h2>Journal Papers</h2>
+<ul>
+<li><p>Z. Qin and Z. Zhu, &lsquo;&lsquo;<a href="https://journals.aps.org/pra/accepted/10.1103/wqrc-z7th">Quantum State Tomography for Tensor Networks in Two Dimensions</a>," <i>Physical Review A (PRA)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/11355860">Optimal Allocation of Pauli Measurements for Low-rank Quantum State Tomography</a>," <i>IEEE Transactions on Quantum Engineering (TQE)</i>, 2026.</p>
+</li>
+</ul>
 <ul>
 <li><p>Z. Qin and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/11303361">Optimal Error Analysis of Channel Estimation for IRS-assisted MIMO Systems</a>," <i>IEEE Transactions on Signal Processing (TSP)</i>, 2025.</p>
 </li>
@@ -209,6 +201,26 @@
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
 <ul>
+<li><p>Z. Qin, J. Jiang, Z. Zhu, &lsquo;&lsquo;Learning to Adapt: In-Context Learning Beyond Stationarity", <i>International Conference on Learning Representations (ICLR)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Zhu, M. Mahdi, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2510.00404">AbsTopK: Rethinking Sparse Autoencoders For Bidirectional Features</a>", <i>International Conference on Learning Representations (ICLR)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>Y. Dong, J. Jiang, Z. Zhu, Xia Ning, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2506.09048">Understanding Task Vectors in In-Context Learning: Emergence, Functionality, and Limitations</a>", <i>International Conference on Learning Representations (ICLR)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>Y. Gao<b>, A. Unal</b>, A. Rangamani, Z. Zhu, &lsquo;&lsquo;An Illusion of Unlearning? Assessing Machine Unlearning Through Internal Representation", <i>International Conference on Artificial Intelligence and Statistics (AISTAS)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>H. Zhu, F. Wang, T. Ding, Q. Qu, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2412.08175">Analyzing and Mitigating Model Collapse in Reflow Methods</a>," <i>Conference on Parsimony and Learning (CPAL)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
 <li><p>A. Liu, C. Hill, J. Jiang, Z. Zhu, &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?", <i>IEEE International Conference on Data Mining (ICDM) UGHS Symposium</i>, 2025. (<font color=red ><b>best paper award</b></font>)</p>
 </li>
 </ul>
@@ -237,11 +249,16 @@
 </li>
 </ul>
 <ul>
-<li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;Tracing Representation Progression: Analyzing and Enhancing Layer-Wise Similarity," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
+<li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;<a href="https://openreview.net/pdf?id=vVxeFSR4fU">Tracing Representation Progression: Analyzing and Enhancing Layer-Wise Similarity</a>," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
 </li>
 </ul>
 <ul>
-<li><p>X. Chen, Z. Zhu, A. Perrault, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.05710">The Distributional Reward Critic Framework for Reinforcement Learning Under Perturbed Rewards</a>," <i>AAAI</i>, 2025.</p>
+<li><p>X. Chen, Z. Zhu, A. Perrault, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.05710">The Distributional Reward Critic Framework for Reinforcement Learning Under 
+Perturbed Rewards</a>," <i>AAAI</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Zhou, J. Jiang, Z. Zh, &lsquo;&lsquo;<a href="https://openreview.net/pdf?id=5eHpefiK8W">Are all layers created equal: A neural collapse perspective</a>," <i>Conference on Parsimony and Learning (CPAL)</i>, 2025.</p>
 </li>
 </ul>
 <ul>
@@ -379,6 +396,10 @@ Learning</a>,&rsquo;&rsquo; <i>Neural Information Processing Systems (NeurIPS)</
 </ul>
 <h2>Conference Papers&ndash;Signal Processing</h2>
 <ul>
+<li><p>X. Liang, Z. Qin, Z. Zhu, and S. Li, &lsquo;&lsquo;Landscape analysis of simultaneous blind deconvolution and phase retrieval," <i>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
 <li><p>H. Yu, Z. Qin, and Z. Zhu, “<a href="https://ieeexplore.ieee.org/document/9747165">Learning Approach for Fast Approximate Matrix Factorizations</a>,” <i>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</i>, 2022.</p>
 </li>
 </ul>
@@ -496,7 +517,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-27 17:16:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-26 10:57:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
