--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Email: zhu.3440@osu.edu</p>
 <h2>Recent Selected Publications:</h2>
 <h3>Representation and Interpretability</h3>
 <ul>
-<li><p>J. Jiang, Y. Dong, J. Zhou, and Z. Zhu &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17322">From Compression to Expansion: A Layerwise Analysis of In-Context Learning</a>," 2025.</p>
+<li><p>X. Zhu, M. Mahdi, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2510.00404">AbsTopK: Rethinking Sparse Autoencoders For Bidirectional Features</a>", <i>International Conference on Learning Representations (ICLR)</i>, 2026.</p>
 </li>
 </ul>
 <ul>
@@ -51,6 +51,19 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <ul>
 <li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," <i>International Conference in Machine Learning (ICML)</i>, 2024.</p>
+</li>
+</ul>
+<h3>In-context Learning</h3>
+<ul>
+<li><p>Z. Qin, J. Jiang, Z. Zhu, &lsquo;&lsquo;Learning to Adapt: In-Context Learning Beyond Stationarity", <i>International Conference on Learning Representations (ICLR)</i>, 2026.</p>
+</li>
+</ul>
+<ul>
+<li><p>Y. Dong, J. Jiang, Z. Zhu, Xia Ning, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2506.09048">Understanding Task Vectors in In-Context Learning: Emergence, Functionality, and Limitations</a>," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Jiang, Y. Dong, J. Zhou, and Z. Zhu &lsquo;&lsquo;<a href="https://arxiv.org/abs/2505.17322">From Compression to Expression: A Layerwise Analysis of In-Context Learning</a>," 2025.</p>
 </li>
 </ul>
 <h3>Quantum Information</h3>
@@ -67,6 +80,10 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <h2>News: </h2>
+<ul>
+<li><p>[Jan 2026] 3 papers at ICLR 2026 on interpretability and in-context learning, 1 paper at CPAL 2026 on model collapse, 1 paper at AISTAS 2026 on faithfully evaluating machine unlearning through internal representation, and journal papers at IEEE TQE and Physical Review A on quantum information.</p>
+</li>
+</ul>
 <ul>
 <li><p>[Nov 2025] Congratulations to Alina Liu and Chris Hill (high school interns from Columbus Academy) and Jiachen Jiang for receiving the Best Paper Award at <a href="https://2025-icdm-ughs.github.io/">ICDM UGHS Symposium 2025</a> for the work &lsquo;&lsquo;Can Reasoning LLMs Eliminate Conformity in Multi-Agent Systems?".</p>
 </li>
@@ -118,7 +135,7 @@ Compressive Measurements</a>" at University of Hawaii at Manoa.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-27 17:16:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2026-01-26 10:59:55 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
